--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "graphql-request": "^4.3.0",
     "html5-qrcode": "^2.2.1",
     "next": "latest",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
